dodanie wyswietlania przedmiotow na panelu uzytkownika
jak wyzej

--- a/git_test/Views/Account/AddThing.cshtml
+++ b/git_test/Views/Account/AddThing.cshtml
@@ -53,11 +53,9 @@
                 </div>
             </div>
         </div>
+ 
     }
-
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+   </table>
 
 
 
