--- a/git_test/Views/Account/LoggedIn.cshtml
+++ b/git_test/Views/Account/LoggedIn.cshtml
@@ -131,7 +131,7 @@
                     <div class="row postrow1">
                         <div class="col-md-1 triangle-left"></div>
                         <div class="col-md-11 post-txt">
-                            <h3>@Session["Username"].ToString()</h3>
+                            <h3>@Html.DisplayFor(modelItem => item.Username)</h3>
                             <div class="clearfix"></div>
                             <h5>@Html.DisplayFor(modelItem => item.Name)</h5>
                             <p> @Html.DisplayFor(modelItem => item.Describe)</p>
