--- a/git_test/Views/Account/Register.cshtml
+++ b/git_test/Views/Account/Register.cshtml
@@ -99,6 +99,7 @@
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <button type="submit" value="Create" class="button btn btn-default"><a>Załóż konto</a></button>
+                        <button class="button">@Html.ActionLink("Zaloguj się", "Login", "Account")</button>
                     </div>
                 </div>
             </div>
