--- a/git_test/Views/Home/Index.cshtml
+++ b/git_test/Views/Home/Index.cshtml
@@ -53,6 +53,7 @@
                 <h2>Witaj w SocialSwap!</h2>
                 <p>Wymieniaj się, kolekcjonuj i poznawaj wspaniałych ludzi razem z nami...</p>
                 <button class="button">@Html.ActionLink("Dołącz do nas","Register","Account")</button>
+                <button class="button">@Html.ActionLink("Zaloguj się", "Login", "Account")</button>
             </div><!-- /banner-content -->
         </div><!-- /container -->
         <div class="container">
